fix spacing issues

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -43,5 +43,5 @@ h6 {
 }
 
 .expertise-box {
-  @apply py-10 mb-4 rounded-lg md:col-6 lg:col-4 bg-white dark:bg-darkmode-theme-light px-7 border border-indigo-100;
+  @apply py-10 rounded-lg md:col-6 lg:col-4 bg-white dark:bg-darkmode-theme-light px-7 border border-indigo-100;
 }
